welcome.lessons.welcome.array.has271.Has271.scala.error
has271:4: error: illegal start of simple expression
	if ( (nums(k+1) == (nums(k)+5)) && ( math.abs((nums(k) -  (nums(k+2)))) <=2)|| math.abs((nums(k+2) -  (nums(k)))) <=2))
                                                                                                                              ^